# inventario_magazzino

./: .gitignore  ANALYSIS_REPORT.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  LICENSE  README.md  SETUP.md
.specify/memory/: constitution.md
backend/: .dockerignore  .env.example  .flake8  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/scripts/: seed_data.py
backend/src/: main.py
backend/src/api/: dashboard.py  errors.py  export.py  items.py  movements.py
backend/src/db/: database.py
backend/src/models/: __init__.py  item.py  movement.py  schemas.py
backend/src/services/: export_service.py  item_service.py  movement_service.py  stock_service.py  validation.py
frontend/: .env.example  .vercelignore  next-i18next.config.js  next.config.js  package-lock.json  package.json
frontend/src/components/: AdjustmentForm.tsx  CategoryFilter.tsx  DashboardCard.tsx  DashboardStats.tsx  ItemForm.tsx  ItemTable.tsx  Layout.tsx  Modal.tsx  MovementInForm.tsx  MovementOutForm.tsx  SearchBar.tsx  UnderStockToggle.tsx
frontend/src/i18n/: it.json
frontend/src/pages/: index.tsx  movimenti.tsx
frontend/src/services/: api.ts  exportExcel.ts
frontend/src/styles/: globals.css
frontend/src/types/: api.ts
frontend/tests/: locale-validation.md
scripts/: load_inventory_from_pdf.py
specs/001-warehouse-inventory-system/: data-model.md  database-constraints-checklist.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+2 files in other folders)
